Toggle between songs

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="container">
       <div class="music-player">
         <nav>
-          <div class="circle" style="cursor: pointer">
+          <div class="circle" style="cursor: pointer" onclick="lastSong()">
             <img src="./images/back-arrow.png" />
           </div>
-          <div class="circle" style="cursor: pointer">
+          <div class="circle" style="cursor: pointer" onclick="nextSong()">
             <img src="./images/arrow-right.png" />
           </div>
         </nav>
